# nce-english-practices

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  GEMINI.md  README.md  STYLE_MIGRATION.md  app.py  asr_playground.ipynb  chat_manager.py  config.py  create_db_script.py  dictionary_service.py  english_tense_practice.py  final_test.txt  frontend_log.txt  lint_output.txt  models.py  opencode.json  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  practice.db  practice_core.py  pre_commit_check.sh  pyproject.toml  pytest.ini  quick_test.txt  quiz_generator.py  scenario_generator.py  sentence_generator.py  story_generator.py  tailwind.config.js  test_db_persist.py  theme_vocab.py  tsconfig.json  tui.css  (+3 more)
.Jules/: palette.md
.claude/: settings.local.json
.jules/: bolt.md  palette.md  sentinel.md
alembic/: env.py
app/: app_factory.py  config.py  database.py  db_models.py  main.py  models.py  prompts.yaml
deploy/: .env.example  docker-compose.yml
docs/: DEVELOPER_ONBOARDING.md  MOBILE_ARCHITECTURE_PLAN.md  MOBILE_QUICK_REFERENCE.md  Multi-platform Development Research Report.md  TEST_CONFIGURATION.md  auth-system.md  coach-service.md  common-pitfalls.md  deepgram-unified-panel.md  design-system.md  mobile-architecture.md  performance-metrics.md  plan.md  podcast-ai-transcription-design.md  podcast-system.md  progress.md  transcription-service.md  verification_guide.md
frontend/: eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tailwind.config.js  vite.config.js
legacy/: inspect_mdict_utils.py
patches/: react-native-css-interop@0.2.1.patch
scripts/: analyze_voice_api.py  check_config.py  clear_collocation_cache.py  convert_mdx_to_sqlite.py  create_db_script.py  debug_asl_profile.py  dev.ps1  diagnose_collocations.py  diagnose_ldoce.py  export_openapi.py  extract_collins_samples.py  extract_ldoce_samples.py  fetch_deepgram_docs.ps1  generate_cert.py  generate_ldoce_golden.py  inspect_genai.py  measure_performance_queries.py  reset_all_data.py  reset_sentence_data.py  scrape_elevenlabs_docs.py  seed_word_lists.py  test.ps1  test_dictionary_consistency.py  test_feeder_integration.py  test_provider_arch.py  test_voice_loop.py  unsubscribe_all_podcasts.py  user_admin.py  verify_aui_extended.py  verify_aui_streaming.py  verify_context_grouping.py  verify_dashscope.py  verify_dashscope_llm.py  verify_dashscope_tts.py  verify_deepgram_token.py  verify_interactive_flow.py  verify_llm_loop.py  verify_text_lifecycle.py
static/: manifest.json  sw.js
templates/: index.html
tests/: conftest.py  test_api_content.py  (+81 more)
(+979 files in other folders)
