[project]
name = "nce-english-practices"
version = "0.1.0"
description = "English Tense Practice Web App"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "openai>=2.8.1",
    "python-dotenv>=1.2.1",
    "fastapi>=0.111.0",
    "uvicorn>=0.30.0",
    "jinja2>=3.1.4",
    "readmdict>=0.1.1",
    "beautifulsoup4>=4.14.3",
    "google-genai>=1.53.0",
    "cryptography>=46.0.3",
    "sqlalchemy>=2.0.0",
    "aiosqlite>=0.19.0",
    "asyncpg>=0.29.0",
    "greenlet>=3.0.0",
]
